--- a/FoodSocial/Web.config
+++ b/FoodSocial/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="mydata" connectionString="Data Source=(localdb)\DBNAME;Initial Catalog=FOODSOCIAL;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="mydata" connectionString="Data Source=KOJIBE\SQLEXPRESS;Initial Catalog=FOODSOCIAL;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
